--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ main h1{
     }
 
     .box {
+        flex: 1 1 calc(33.33% - 1rem);
         height: 20vmin;
         width: 20vmin;
         font-size: 6vmin;
